syntax = "proto3";

package ir.sndu.server;

message SeqState {
    int32 seq = 1;
    bytes state = 2;
}

message SeqStateDate {
    int32 seq = 1;
    bytes state = 2;
    int64 date = 3;
}